syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message GenerateUserAvatarUploadLinkRequest {
  string userId = 1;
}

message GenerateUserAvatarUploadLinkResponse {
  string avatarLink = 1;
  string uploadLink = 2;
  map<string, string> formData = 3;
  int64 maxSize = 4;
}
